// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttendanceKitStack - Staging Environment Staging Stack Matches Snapshot 1`] = `
{
  "Description": "DynamoDB clock table for attendance-kit (staging environment)",
  "Outputs": {
    "BackendApiApiUrlE43572B5": {
      "Description": "API Gateway URL (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-ApiUrl",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "BackendApiC9FA6A88",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "BackendApiDeploymentStagestagingB725B091",
            },
            "/",
          ],
        ],
      },
    },
    "BackendApiEndpointAFD87959": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "BackendApiC9FA6A88",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "BackendApiDeploymentStagestagingB725B091",
            },
            "/",
          ],
        ],
      },
    },
    "Environment": {
      "Description": "Deployment environment",
      "Export": {
        "Name": "AttendanceKit-Staging-Environment",
      },
      "Value": "staging",
    },
    "GSIName": {
      "Description": "Global Secondary Index name (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-GSIName",
      },
      "Value": "DateIndex",
    },
    "TableArn": {
      "Description": "DynamoDB clock table ARN (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-ClockTableArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "ClockTable9AA4DD3D",
          "Arn",
        ],
      },
    },
    "TableName": {
      "Description": "DynamoDB clock table name (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-ClockTableName",
      },
      "Value": {
        "Ref": "ClockTable9AA4DD3D",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BackendApiANY1C8097F6": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "Type": "MOCK",
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiAccountEFEAA710": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "BackendApiC9FA6A88",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "BackendApiCloudWatchRoleCA85B02A",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "BackendApiApiFunction20C2BCCB": {
      "DependsOn": [
        "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA",
        "BackendApiApiFunctionServiceRoleD5027739",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "ac94076bcadf94390c8a3f4dba857a70df2647cec6405935a51da3eb1e36b4bb.zip",
        },
        "Description": "Attendance Kit Backend API (staging)",
        "Environment": {
          "Variables": {
            "DYNAMODB_TABLE_NAME": {
              "Ref": "ClockTable9AA4DD3D",
            },
            "JWT_SECRET": "default-secret-change-in-production",
            "NODE_ENV": "staging",
          },
        },
        "FunctionName": "attendance-kit-staging-api",
        "Handler": "lambda.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "BackendApiApiFunctionServiceRoleD5027739",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "BackendApiApiFunctionServiceRoleD5027739": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ClockTable9AA4DD3D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ClockTable9AA4DD3D",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ClockTable9AA4DD3D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ClockTable9AA4DD3D",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA",
        "Roles": [
          {
            "Ref": "BackendApiApiFunctionServiceRoleD5027739",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BackendApiC9FA6A88": {
      "Properties": {
        "Description": "Attendance Kit REST API (staging)",
        "Name": "attendance-kit-staging-api",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "BackendApiCloudWatchRoleCA85B02A": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "BackendApiDeployment9F8ADE10f127db43a114cf899fd5d50c9521388f": {
      "DependsOn": [
        "BackendApiproxyANY38DE49FF",
        "BackendApiproxyOPTIONSA866EA0D",
        "BackendApiproxyBBA75B2B",
        "BackendApiANY1C8097F6",
        "BackendApiOPTIONSAA9AC75A",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Attendance Kit REST API (staging)",
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "BackendApiDeploymentStagestagingB725B091": {
      "DependsOn": [
        "BackendApiAccountEFEAA710",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "BackendApiDeployment9F8ADE10f127db43a114cf899fd5d50c9521388f",
        },
        "MethodSettings": [
          {
            "DataTraceEnabled": false,
            "HttpMethod": "*",
            "ResourcePath": "/*",
            "ThrottlingBurstLimit": 100,
            "ThrottlingRateLimit": 50,
          },
        ],
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
        "StageName": "staging",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "BackendApiOPTIONSAA9AC75A": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
                "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiproxyANY38DE49FF": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "BackendApiApiFunction20C2BCCB",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "BackendApiproxyBBA75B2B",
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiproxyANYApiPermissionAttendanceKitStagingStackBackendApi0C9AF52AANYproxy1341691F": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "BackendApiApiFunction20C2BCCB",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "BackendApiC9FA6A88",
              },
              "/",
              {
                "Ref": "BackendApiDeploymentStagestagingB725B091",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "BackendApiproxyANYApiPermissionTestAttendanceKitStagingStackBackendApi0C9AF52AANYproxyEE86D160": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "BackendApiApiFunction20C2BCCB",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "BackendApiC9FA6A88",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "BackendApiproxyBBA75B2B": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "BackendApiproxyOPTIONSA866EA0D": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
                "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "BackendApiproxyBBA75B2B",
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "ClockTable9AA4DD3D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "userId",
            "AttributeType": "S",
          },
          {
            "AttributeName": "timestamp",
            "AttributeType": "S",
          },
          {
            "AttributeName": "date",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "GlobalSecondaryIndexes": [
          {
            "IndexName": "DateIndex",
            "KeySchema": [
              {
                "AttributeName": "date",
                "KeyType": "HASH",
              },
              {
                "AttributeName": "timestamp",
                "KeyType": "RANGE",
              },
            ],
            "Projection": {
              "ProjectionType": "ALL",
            },
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "userId",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "timestamp",
            "KeyType": "RANGE",
          },
        ],
        "PointInTimeRecoverySpecification": {
          "PointInTimeRecoveryEnabled": true,
        },
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "attendance-kit-staging-clock",
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": "Engineering",
          },
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AttendanceKitStack Stack Matches Snapshot 1`] = `
{
  "Description": "DynamoDB clock table for attendance-kit (dev environment)",
  "Outputs": {
    "BackendApiApiUrlE43572B5": {
      "Description": "API Gateway URL (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-ApiUrl",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "BackendApiC9FA6A88",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "BackendApiDeploymentStagedev97216E6E",
            },
            "/",
          ],
        ],
      },
    },
    "BackendApiEndpointAFD87959": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "BackendApiC9FA6A88",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "BackendApiDeploymentStagedev97216E6E",
            },
            "/",
          ],
        ],
      },
    },
    "Environment": {
      "Description": "Deployment environment",
      "Export": {
        "Name": "AttendanceKit-Dev-Environment",
      },
      "Value": "dev",
    },
    "GSIName": {
      "Description": "Global Secondary Index name (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-GSIName",
      },
      "Value": "DateIndex",
    },
    "TableArn": {
      "Description": "DynamoDB clock table ARN (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-ClockTableArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "ClockTable9AA4DD3D",
          "Arn",
        ],
      },
    },
    "TableName": {
      "Description": "DynamoDB clock table name (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-ClockTableName",
      },
      "Value": {
        "Ref": "ClockTable9AA4DD3D",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BackendApiANY1C8097F6": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "Type": "MOCK",
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiAccountEFEAA710": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "BackendApiC9FA6A88",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "BackendApiCloudWatchRoleCA85B02A",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "BackendApiApiFunction20C2BCCB": {
      "DependsOn": [
        "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA",
        "BackendApiApiFunctionServiceRoleD5027739",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "ac94076bcadf94390c8a3f4dba857a70df2647cec6405935a51da3eb1e36b4bb.zip",
        },
        "Description": "Attendance Kit Backend API (dev)",
        "Environment": {
          "Variables": {
            "DYNAMODB_TABLE_NAME": {
              "Ref": "ClockTable9AA4DD3D",
            },
            "JWT_SECRET": "default-secret-change-in-production",
            "NODE_ENV": "dev",
          },
        },
        "FunctionName": "attendance-kit-dev-api",
        "Handler": "lambda.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "BackendApiApiFunctionServiceRoleD5027739",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "BackendApiApiFunctionServiceRoleD5027739": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ClockTable9AA4DD3D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ClockTable9AA4DD3D",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ClockTable9AA4DD3D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ClockTable9AA4DD3D",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA",
        "Roles": [
          {
            "Ref": "BackendApiApiFunctionServiceRoleD5027739",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BackendApiC9FA6A88": {
      "Properties": {
        "Description": "Attendance Kit REST API (dev)",
        "Name": "attendance-kit-dev-api",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "BackendApiCloudWatchRoleCA85B02A": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "BackendApiDeployment9F8ADE108e22937f52558ee5aadace76118c6cbb": {
      "DependsOn": [
        "BackendApiproxyANY38DE49FF",
        "BackendApiproxyOPTIONSA866EA0D",
        "BackendApiproxyBBA75B2B",
        "BackendApiANY1C8097F6",
        "BackendApiOPTIONSAA9AC75A",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Attendance Kit REST API (dev)",
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "BackendApiDeploymentStagedev97216E6E": {
      "DependsOn": [
        "BackendApiAccountEFEAA710",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "BackendApiDeployment9F8ADE108e22937f52558ee5aadace76118c6cbb",
        },
        "MethodSettings": [
          {
            "DataTraceEnabled": false,
            "HttpMethod": "*",
            "ResourcePath": "/*",
            "ThrottlingBurstLimit": 100,
            "ThrottlingRateLimit": 50,
          },
        ],
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
        "StageName": "dev",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "BackendApiOPTIONSAA9AC75A": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
                "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiproxyANY38DE49FF": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "BackendApiApiFunction20C2BCCB",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "BackendApiproxyBBA75B2B",
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiproxyANYApiPermissionAttendanceKitDevStackBackendApi06BA8792ANYproxy7EA7FA50": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "BackendApiApiFunction20C2BCCB",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "BackendApiC9FA6A88",
              },
              "/",
              {
                "Ref": "BackendApiDeploymentStagedev97216E6E",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "BackendApiproxyANYApiPermissionTestAttendanceKitDevStackBackendApi06BA8792ANYproxy63EBFFA7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "BackendApiApiFunction20C2BCCB",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "BackendApiC9FA6A88",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "BackendApiproxyBBA75B2B": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "BackendApiproxyOPTIONSA866EA0D": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
                "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "BackendApiproxyBBA75B2B",
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "ClockTable9AA4DD3D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "userId",
            "AttributeType": "S",
          },
          {
            "AttributeName": "timestamp",
            "AttributeType": "S",
          },
          {
            "AttributeName": "date",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "GlobalSecondaryIndexes": [
          {
            "IndexName": "DateIndex",
            "KeySchema": [
              {
                "AttributeName": "date",
                "KeyType": "HASH",
              },
              {
                "AttributeName": "timestamp",
                "KeyType": "RANGE",
              },
            ],
            "Projection": {
              "ProjectionType": "ALL",
            },
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "userId",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "timestamp",
            "KeyType": "RANGE",
          },
        ],
        "PointInTimeRecoverySpecification": {
          "PointInTimeRecoveryEnabled": true,
        },
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "attendance-kit-dev-clock",
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": "Engineering",
          },
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
